--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       transform: translateY(0);
     }
     .card {
-      background: #ffffff;
+      background: #c2b4cc;
       border-radius: 16px;
       padding: 12px 14px;
       box-shadow: 0 8px 20px rgba(15, 23, 42, 0.08);
