--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       transform: translateY(0);
     }
     .card {
-      background: #f8edff;
+      background: #eee9f2;
       border-radius: 16px;
       padding: 12px 14px;
       box-shadow: 0 8px 20px rgba(15, 23, 42, 0.08);
@@ -322,7 +322,7 @@ flex: 1;
       gap: 10px;
       padding: 10px 8px;
       border-radius: 12px;
-      background: #f8edff;
+      background: #eee9f2;
       margin-bottom: 6px;
       border: 1px solid #e5e5ea;
     }
