--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
       background: #ececf1;
     }
 
-    /* 小正方形 countdown：放在三行日期文字右側，平排 */
+    /* 小正方形 down：放在三行日期文字右側，平排 */
     .status-square {
       min-width: 120px;
       min-height: 60px;
       padding: 6px 10px;
       border-radius: 14px;
-      background: #ffffff;
+      background: #eee9f2;
       border: 1px solid #e5e5ea;
       box-shadow: 0 6px 14px rgba(15,23,42,0.08);
       text-align: center;
